force-app/main/default/objects/Order__c/fields/Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Time__c</fullName>
    <label>Order Date Time</label>
    <type>DateTime</type>
</CustomField>