force-app/main/default/objects/Order__c/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <label>Table Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>