force-app/main/default/objects/Order__c/fields/Waiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Waiter_Name__c</fullName>
    <label>Waiter Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>