force-app/main/default/objects/Order__c/validationRules/Customer_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Name_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Customer_Name__c)</errorConditionFormula>
    <errorDisplayField>Customer_Name__c</errorDisplayField>
    <errorMessage>Customer Name cannot be blank</errorMessage>
</ValidationRule>