force-app/main/default/objects/Order__c/validationRules/Table_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Table_Number</fullName>
    <active>true</active>
    <errorConditionFormula>Table_Number__c   &lt;= 0</errorConditionFormula>
    <errorMessage>Table Number must be greater than 0</errorMessage>
</ValidationRule>